fix small contrast issues, label

--- a/src/Aspire.Dashboard/wwwroot/css/app.css
+++ b/src/Aspire.Dashboard/wwwroot/css/app.css
@@ -30,8 +30,9 @@ fluent-toolbar[orientation=horizontal] {
     --log-warning: #FBF3DD;
     --badge-fill-error: var(--error);
     --badge-color-error: var(--foreground-on-accent-rest);
-    --foreground-subtext-rest: #6F6F6F;
+    --foreground-subtext-rest: #636363;
     --foreground-subtext-hover: #6C6C6C;
+    --neutral-layer-4: #e0e0e0 !important;
 }
 
 [data-theme="dark"] {
